Changed size to Simha
Moved Simha to the right and made him bigger

--- a/bbtdash/src/App.css
+++ b/bbtdash/src/App.css
@@ -65,8 +65,10 @@ section {
 }
 
 .Simah {
+  position: absolute;
+  right: 70px;
   width: auto;
-  height: 100px;
+  height: 630px;
 }
 
 section:last-child {
