--- a/bbtdash/src/App.css
+++ b/bbtdash/src/App.css
@@ -35,11 +35,6 @@ header {
   left: 500px;
 }
 
-section {
-  padding: 0px;
-  border-bottom: 1px solid #9e3939;
-}
-
 .main-content {
   position: relative;
   background-image: url('./background.png'); 
@@ -51,7 +46,7 @@ section {
 }
 
 .content-overlay {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -69,11 +64,18 @@ section {
 
 .Simah {
   position: absolute;
-  right: 70px;
-  width: auto;
-  height: 700px;
+  right: -28%;
+  top: 1%;
+  width: 100%;
+  height: 100%;
 }
 
 section:last-child {
   border-bottom: none;
+}
+
+footer {
+  background-color: white;
+  padding: 20px;
+
 }
