--- a/bbtdash/src/App.css
+++ b/bbtdash/src/App.css
@@ -42,6 +42,23 @@ header {
   background-position: center;
   width: 2000px;
   height: 1000px;
+  margin: 0 auto;
+}
+
+.content-box {
+  background: rgba(255, 255, 255, 0.8); 
+  border: 2px solid #ccc; 
+  padding: 20px; 
+  border-radius: 10px; 
+  width: 80%; 
+  margin: 20px auto; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  box-sizing: border-box; 
+  text-align: center;
+}
+
+.content-box h1, .content-box h2, .content-box p {
+  margin: 20px 0; 
 }
 
 .content-overlay {
@@ -68,6 +85,25 @@ header {
   transform: translateY(-50%); 
   width: auto; 
   height: 80%; 
+}
+
+.highlight {
+  color: white;
+  background-color: rgb(3, 19, 114);
+  font-weight: bold; 
+}
+
+.dropdown {
+  margin: 10px 0;
+}
+
+label {
+  margin-right: 10px;
+}
+
+select {
+  padding: 5px;
+  font-size: 16px;
 }
 
 footer {
